--- a/helm/jenkins-k8s/values.yaml
+++ b/helm/jenkins-k8s/values.yaml
@@ -7,7 +7,7 @@ initContainerImage: "alpine:3.10.2"
 replicaCount: 1
 imagePullSecrets:
 image:
-  repository: abraaojs/jenkins:v0.0.1
+  repository: abraaojs/jenkins
   tag: v3
   pullPolicy: Always
 
@@ -36,7 +36,7 @@ service:
   externalPort: 80
   internalPort: 8080
 ## Make sure the javaOps and resources are aligned to avoid conflicts
-javaOpts: "-Xms512m -Xmx1g"
+javaOpts: "-Xms512m -Xmx4g"
 resources:
   requests:
     cpu: 100m
